[gd_scene load_steps=4 format=3 uid="uid://c55gkyfbhrmqd"]

[ext_resource type="Script" path="res://event/event_system.gd" id="1_pmc00"]
[ext_resource type="PackedScene" uid="uid://bl5citskhi3ji" path="res://card/card.tscn" id="2_852uq"]
[ext_resource type="Script" path="res://event/card_clicker.gd" id="2_v7yhn"]

[node name="EventSystem" type="CanvasLayer"]
script = ExtResource("1_pmc00")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1600, 900)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/CenterContainer"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "事件"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContextLabel" type="Label" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "無任何事件"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChooseCard" type="MarginContainer" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="Card1" type="Control" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ChooseCard"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 225)
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 1
script = ExtResource("2_v7yhn")

[node name="Card" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ChooseCard/Card1" instance=ExtResource("2_852uq")]
position = Vector2(75, 112.5)

[node name="Line2D" type="Line2D" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ChooseCard/Card1"]
visible = false
points = PackedVector2Array(0, 0, 150, 0, 150, 225, 0, 225)
closed = true

[node name="Card2" type="Control" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ChooseCard"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 225)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 1
script = ExtResource("2_v7yhn")

[node name="Card" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ChooseCard/Card2" instance=ExtResource("2_852uq")]
position = Vector2(75, 112.5)

[node name="Line2D" type="Line2D" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ChooseCard/Card2"]
visible = false
points = PackedVector2Array(0, 0, 150, 0, 150, 225, 0, 225)
closed = true

[node name="Card3" type="Control" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ChooseCard"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 225)
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 1
script = ExtResource("2_v7yhn")

[node name="Card" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ChooseCard/Card3" instance=ExtResource("2_852uq")]
position = Vector2(75, 112.5)

[node name="Line2D" type="Line2D" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ChooseCard/Card3"]
visible = false
points = PackedVector2Array(0, 0, 150, 0, 150, 225, 0, 225)
closed = true

[node name="ConfirmButton" type="Button" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "確認"

[connection signal="pressed" from="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
